[gd_scene load_steps=16 format=3 uid="uid://p1d7of6lutxe"]

[ext_resource type="Script" uid="uid://dnust1jwuyaw2" path="res://actors/environments/PentaGoal.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://c1duhx14s1f2t" path="res://actors/environments/Field.tscn" id="2"]
[ext_resource type="AudioStream" uid="uid://blq5qxfnplj2y" path="res://assets/audio/gameplay/nocrown.ogg" id="5"]
[ext_resource type="PackedScene" path="res://combat/traits/Goal.tscn" id="6"]
[ext_resource type="PackedScene" path="res://combat/traits/Owned.tscn" id="7"]
[ext_resource type="PackedScene" path="res://combat/traits/Dropper.tscn" id="8"]
[ext_resource type="FontFile" uid="uid://cr1ufi8wpbpqp" path="res://assets/fonts/04b_19.ttf" id="9"]
[ext_resource type="PackedScene" path="res://combat/traits/NavigationZone.tscn" id="10"]

[sub_resource type="ConvexPolygonShape2D" id="9"]
points = PackedVector2Array(-80.9017, -58.7785, 30.9017, -95.1057, 100, -2.44921e-14, 30.9017, 95.1057, -80.9017, 58.7785, -80.9017, -58.7785)

[sub_resource type="ConvexPolygonShape2D" id="10"]
points = PackedVector2Array(-80.9017, -58.7785, 30.9017, -95.1057, 100, -2.44921e-14, 30.9017, 95.1057, -80.9017, 58.7785, -80.9017, -58.7785)

[sub_resource type="ParticleProcessMaterial" id="3"]
resource_local_to_scene = true
emission_shape = 2
emission_sphere_radius = 1.0
gravity = Vector3(0, 0, 0)
scale_min = 0.0
scale_max = 0.0

[sub_resource type="GDScript" id="8"]
script/source = "extends Node2D

func _process(delta):
	rotation = -get_parent().global_rotation
"

[sub_resource type="FontFile" id="7"]
fallbacks = Array[Font]([ExtResource("9")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="Animation" id="4"]
length = 2.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FeedbackLine:width")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [20.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FeedbackLine:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.4, 1.4)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/path = NodePath("FeedbackLine:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1.5, 1.5, 1.5, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s7561"]
_data = {
&"Feedback": SubResource("4")
}

[node name="PentaGoal" type="Node2D" groups=["in_camera"]]
script = ExtResource("1")

[node name="NavigationZone" parent="." instance=ExtResource("10")]
offset_type = "outset"
layers = ["holder"]

[node name="Goal" parent="." instance=ExtResource("6")]

[node name="Owned" parent="." instance=ExtResource("7")]

[node name="Field" parent="." instance=ExtResource("2")]
type = 4

[node name="Polygon2D" parent="Field" index="1"]
polygon = PackedVector2Array(30.9017, 95.1057, -80.9017, 58.7785, -80.9017, -58.7785, 30.9017, -95.1057, 100, -2.44921e-14)

[node name="Line2D" parent="Field" index="2"]
points = PackedVector2Array(30.9017, 95.1057, -80.9017, 58.7785, -80.9017, -58.7785, 30.9017, -95.1057, 100, -2.44921e-14, 30.9017, 95.1057)

[node name="Area2D" parent="Field" index="3"]
collision_mask = 10759
gravity_point_center = Vector2(0, -0.5)

[node name="Dropper" parent="Field/Area2D" index="0" instance=ExtResource("8")]

[node name="CollisionShape2D" parent="Field/Area2D" index="2"]
shape = SubResource("9")

[node name="CollisionShape2D" parent="Field/CrownCollider" index="0"]
shape = SubResource("10")

[node name="GPUParticles2D" parent="Field" index="5"]
process_material = SubResource("3")

[node name="GRegularPolygon" type="Node" parent="Field"]

[node name="LabelWrapper" type="Node2D" parent="."]
z_index = 10
script = SubResource("8")

[node name="Label" type="Label" parent="LabelWrapper"]
self_modulate = Color(1, 1, 1, 0.196078)
offset_left = -192.0
offset_top = -64.0
offset_right = 192.0
offset_bottom = 64.0
theme_override_fonts/font = SubResource("7")
text = "X"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Rings" type="Node2D" parent="."]
z_index = 10
z_as_relative = false

[node name="FeedbackLine" type="Line2D" parent="."]
visible = false
points = PackedVector2Array(100, 0, 30.9017, 95.1057, -80.9017, 58.7785, -80.9017, -58.7785, 30.9017, -95.1057, 100, 0)
width = 20.0
default_color = Color(1.5, 1.5, 1.5, 1)
texture_mode = -488090432

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_s7561")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5")

[editable path="Field"]
